--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
     "react": "^16.12.0",
