--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-sharp": "^2.5.3",
+    "gsap": "^3.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.10.0",
